--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -19,6 +19,13 @@
     transition: transform 0.4s ease;
   }
   
+  .card .card-bottom {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
   .card .card-top, .card .card-bottom {
     display: flex;
     justify-content: space-between;
@@ -29,16 +36,16 @@
   }
   
   .card .card-title {
+    font-size: 1.5em; /* Augmente la taille */
     font-weight: bold;
+    text-align: center;
   }
   
   .card .card-top p, .card .card-bottom p {
     font-weight: 600;
   }
   
-  .card .card-bottom {
-    align-items: flex-end;
-  }
+
   
   .card .card-image {
     position: absolute;
