mycards page : filter on all cards or just my cards

--- a/src/app/mycards/card.css
+++ b/src/app/mycards/card.css
@@ -20,3 +20,13 @@ img {
     width: 100%;
 
 }
+
+.cardSetSelector {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+}
+.toggle-button-cardSet {
+    margin: 20px;
+}
+
