--- a/src/app/(public)/market/market.css
+++ b/src/app/(public)/market/market.css
@@ -12,12 +12,24 @@
   }
   
   .market-card {
+    position: relative;
     grid-area: card;
+    left: 50%;
     display: flex;
-    justify-content: center;
+    height: 400px;
     align-items: center;
+    user-select: none;
   }
   
+  .market-card img {
+    width: 70%;
+    height: auto;
+    align-self: center;
+    user-select: none;
+}
+
   .market-data {
     grid-area: data;
+    position: relative;
+    top: 50%;
   }
