saving state css

--- a/src/app/(protected)/mycards/card.css
+++ b/src/app/(protected)/mycards/card.css
@@ -42,6 +42,12 @@
     .toggle-button-cardSet {
         margin: 20px;
     }
+    
+    .toggle-button-cardSet.saving {
+        background-color: #ccc;
+        cursor: not-allowed;
+        position: relative;
+      }
 
     .toggle-button-cardSet.active {
         background-color: blue;
