rarity filter fixed + some css

--- a/src/app/(protected)/mycards/card.css
+++ b/src/app/(protected)/mycards/card.css
@@ -41,6 +41,7 @@
 
     .toggle-button-cardSet {
         margin: 20px;
+        user-select: none;
     }
     
     .toggle-button-cardSet.saving {
