--- a/src/app/(protected)/mycards/card.css
+++ b/src/app/(protected)/mycards/card.css
@@ -27,20 +27,17 @@
         width: 100%;
     }
 
-    .cardSetSelector {
+    .rarity-selector {
         display: flex;
         align-items: baseline;
         justify-content: center;
+        gap: 20px;
+        margin: 10px 0;
     }
 
-    .mass-selection {
-        display: flex;
-        align-items: baseline;
-        justify-content: center;
-    }
+
 
     .toggle-button-cardSet {
-        margin: 20px;
         user-select: none;
     }
     
