--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@ a {
 }
 
 .title-box {
-  font-family: 'Helvetica', sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-size: 2.2em;
   color: #5f6368;
   text-align: center;
@@ -57,54 +57,52 @@ a {
   background-color: #fff;
   border: 3px solid #70a1ff;
   border-radius: 12px;
-  box-shadow: 
-    3px 3px 0px #70a1ff,
-    -1px -1px 12px rgba(112, 161, 255, 0.1);
-  display: block;  /* Changé de inline-block à block */
-  width: fit-content;  /* Pour que la boîte s'adapte au contenu */
-  margin-left: auto;  /* Ces deux margin auto */
+  box-shadow: 3px 3px 0px #70a1ff, -1px -1px 12px rgba(112, 161, 255, 0.1);
+  display: block; /* Changé de inline-block à block */
+  width: fit-content; /* Pour que la boîte s'adapte au contenu */
+  margin-left: auto; /* Ces deux margin auto */
   margin-right: auto; /* centrent horizontalement */
 }
 
 /* Pour le retour à la ligne après */
 .title-box::after {
-  content: '';
+  content: "";
   display: block;
   margin-bottom: 20px; /* Ajustez cette valeur selon l'espace désiré */
 }
 
 /* Conteneur du formulaire */
 .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    max-width: 300px;
-    margin: auto;
-    font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  max-width: 300px;
+  margin: auto;
+  font-family: Arial, sans-serif;
 }
 
 /* Style du label */
 .form-container label {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #333;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333;
 }
 
 /* Style de l'input */
 .form-container input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 1em;
-    transition: border 0.3s ease;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 1em;
+  transition: border 0.3s ease;
 }
 
 .form-container input:focus {
-    border-color: #6200ea;
-    outline: none;
-    box-shadow: 0 0 5px rgba(98, 0, 234, 0.3);
+  border-color: #6200ea;
+  outline: none;
+  box-shadow: 0 0 5px rgba(98, 0, 234, 0.3);
 }
 
 /* Style général du bouton */
@@ -112,7 +110,7 @@ button {
   padding: 12px 20px;
   font-size: 1.1em;
   font-weight: bold;
- /* background: #6200ea;
+  /* background: #6200ea;
   color: white; */
   border: none;
   border-radius: 8px;
@@ -132,3 +130,23 @@ button:active {
   transform: scale(0.95);
 }
 
+.main-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+
+  p {
+    padding: 10px;
+  }
+
+  h1 {
+    padding: 10px;
+  }
+
+  img {
+    width: 600px;
+    border-radius: 5%;
+  }
+}
