--- a/src/app/(protected)/mycards/Extension.css
+++ b/src/app/(protected)/mycards/Extension.css
@@ -1,7 +1,14 @@
 .extension-header {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr auto 1fr; 
     margin: 10px 0;
+}
+
+.extension-header img {
+    width: 25%;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .mass-selection {
