--- a/src/app/(protected)/mycards/card.css
+++ b/src/app/(protected)/mycards/card.css
@@ -1,3 +1,11 @@
+
+/* Assure-toi que le corps de la page a une hauteur suffisante pour défiler */
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
 .all-cards-page {
 
     .card-container{
@@ -30,9 +38,42 @@
     .rarity-selector {
         display: flex;
         align-items: baseline;
+        align-self: center;
         justify-content: center;
         gap: 20px;
         margin: 10px 0;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        background-color: white;
+
+
+        button {
+            padding: 7px 10px;
+            max-height: 40px;
+        }
+    }
+
+    .name-filter-container {
+        display: flex;
+        flex-direction: column;  /* Place les éléments l'un en dessous de l'autre */
+        align-items: center;     /* Centre les éléments horizontalement */
+        justify-content: center; /* Centre les éléments verticalement (si le container a une hauteur) */
+        height: 65px;           /* Hauteur du container pour voir l'effet du centrage */
+        gap: 10px 0;
+        margin: 0 0 10px 0;
+        position: sticky;
+        top: 42px;
+        z-index: 100;
+        background-color: white;
+        
+        input {
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            width: 200px;            /* Largeur fixe pour démonstration */
+            height: 25px;
+            text-align: center;
+        }
     }
 
 
@@ -110,24 +151,6 @@
             background-color: white;
             border-radius: 4px;
         }
-    }
-
-    .quantity-display:empty{
-        display: none;
-    }
-
-    .quantity-sell {
-        color: rgba(0, 128, 0, 0.807);
-    }
-
-    .quantity-buy {
-        color: rgba(34, 16, 228, 0.842);
-    }
-
-    .edit-container{
-        position: absolute;
-        top: 0;
-        right: 0;
     }
 
 }
